// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/cache > 'should add cache config correctly' 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/package.json",
      ],
      "tailwindcss": [
        "/root/tailwind.config.ts",
      ],
    },
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-test",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > 'should apply cacheDigest' 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/package.json",
      ],
      "tailwindcss": [
        "/root/tailwind.config.ts",
      ],
    },
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-test-c29a5747",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > 'should custom cache directory by user' 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/package.json",
      ],
      "tailwindcss": [
        "/root/tailwind.config.ts",
      ],
    },
    "cacheDirectory": "<ROOT>/node_modules/.cache/tmp",
    "name": "web-test",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > 'should disable cache' 1`] = `
{
  "cache": false,
}
`;

exports[`plugins/cache > 'should not apply cacheDigest' 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/package.json",
      ],
      "tailwindcss": [
        "/root/tailwind.config.ts",
      ],
    },
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-test",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > 'should watch framework config change' 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/package.json",
      ],
      "tailwindcss": [
        "/root/tailwind.config.ts",
      ],
    },
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-test",
    "type": "filesystem",
  },
}
`;

exports[`plugins/cache > 'should watch tsconfig change' 1`] = `
{
  "cache": {
    "buildDependencies": {
      "packageJson": [
        "<ROOT>/package.json",
      ],
      "tailwindcss": [
        "/root/tailwind.config.ts",
      ],
    },
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-test",
    "type": "filesystem",
  },
}
`;
